master | css refactory and prevent reverse tabnabbing

--- a/src/html/404.html
+++ b/src/html/404.html
@@ -12,8 +12,8 @@
                             <span class="hero__text__span hero__text__span--404">404</span>
                         </h2>
                     </div>
-                    <div class="hero__buttons">
-                        <a href="/" class="btn__primary" rel="noreferrer">Voltar para Home</a>
+                    <div class="hero__buttons hero__buttons--404">
+                        <a href="/" class="btn__primary btn__primary--404">Voltar para Home</a>
                     </div>
                 </div>
                 <div class="col-lg-6">
