--- a/src/html/index.html
+++ b/src/html/index.html
@@ -14,13 +14,13 @@
                         <p class="hero__text__paragraph">Desenvolvedor Web</p>
                     </div>
                     <div class="hero__buttons">
-                        <a href="https://github.com/jmontejr" target="_blank" class="btn__social">
+                        <a href="https://github.com/jmontejr" target="_blank" rel="noopener noreferrer" class="btn__social">
                             <img src="assets/images/icons/github.svg" class="btn__social__img" title="Github" alt="Github logo">
                         </a>
-                        <a href="https://www.linkedin.com/in/jmontejr/" target="_blank" class="btn__social">
+                        <a href="https://www.linkedin.com/in/jmontejr/" target="_blank" rel="noopener noreferrer" class="btn__social">
                             <img src="assets/images/icons/linkedin.svg" class="btn__social__img" title="LinkedIn" alt="LinkedIn logo">
                         </a>
-                        <a href="https://codepen.io/jmontejr/" target="_blank" class="btn__social">
+                        <a href="https://codepen.io/jmontejr/" target="_blank" rel="noopener noreferrer" class="btn__social">
                             <img src="assets/images/icons/codepen.svg" class="btn__social__img" title="Codepen" alt="Codepen logo">
                         </a>
                         <a href="#" class="btn__primary" rel="noreferrer">Download CV</a>
