master | setup local system fonts | adding image home loading lazy attr

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -31,7 +31,7 @@
                         <picture>
                             <source media="(max-width:767px)" srcset="assets/images/misc/coding1_mobile.webp">
                             <source media="(min-width:768px)" srcset="assets/images/misc/coding1.webp">
-                            <img src="assets/images/misc/coding1.png" alt="Desenvolvedor programando">
+                            <img src="assets/images/misc/coding1.png" alt="Desenvolvedor programando" loading="lazy">
                         </picture>
                     </div>
                 </div>
