--- a/src/html/index.html
+++ b/src/html/index.html
@@ -23,7 +23,8 @@
                         <a href="https://codepen.io/jmontejr/" target="_blank" rel="noopener noreferrer" class="btn__social">
                             <img src="assets/images/icons/codepen.svg" class="btn__social__img" title="Codepen" alt="Codepen logo">
                         </a>
-                        <a href="#" class="btn__primary" rel="noreferrer">Download CV</a>
+                        <a href="https://drive.google.com/file/d/1V5-hT-jBB17546toEiaiIiaJrisUSaGp/view?usp=sharing" 
+                            target="_blank" class="btn__primary" rel="noreferrer">Download CV</a>
                     </div>
                 </div>
                 <div class="col-lg-6">
